--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="images/profile-pic.png" class="profile-pic">
                 <h3>Asha Leena</h3>
                 <br>
-                <p>Excellent customer service AND Relationship building skill
+                <p>CRM SPECIALIST (Customer Relationship Mangement)
                 <br>At KC Business Solutions India
                 <br>
                 <br>SKILLS
